[refactor] Member 도메인 리팩토링 및 테스트 코드 작성 (#250)
* refactor(jwt): JwtTokenProvider 리팩토링

- boolean 리턴 메서드 추가
- 중복 코드 제거
- Bearer 토큰 처리 개선
- 로그 최소화

* refactor(member): MemberController를 Auth, Profile, Survey 컨트롤러로 분리

유지보수성과 테스트 용이성을 향상시키기 위해, 하나의 MemberController에 집중된 로직을 역할에 따라 3개의 컨트롤러로 분리함.

- AuthController: 인증 및 인가 담당 (로그인, 회원가입, 토큰 재발급, 탈퇴)
- MemberProfileController: 회원 정보 조회/수정 및 앱 설정 담당 (마이페이지, 알림)
- MemberSurveyController: 가입 초기 취향 설문 담당

각 컨트롤러별로 불필요한 Service 의존성을 제거하여 구조를 개선하였으며,
프론트엔드 연동에 영향이 없도록 기존 API URL 경로는 변경 없이 유지함.

* test(support): 컨트롤러 테스트 공통 설정을 위한 ControllerTestSupport 추가

@WebMvcTest 작성 시 반복되는 설정 코드를 제거하고 테스트 작성을 효율화하기 위해 공통 부모 클래스를 추가함.

- ControllerTestSupport 추상 클래스 생성
- Security 설정 및 필수 인프라 Bean(AuthenticationEntryPoint, JPA Context, JWT 등) 일괄 Mocking 처리
- setUp 메서드에 JWT 토큰 인증 통과를 위한 기본 Stubbing 로직 구현

개별 컨트롤러 테스트는 이 클래스를 상속받아 필요한 Service만 선언하면 되며, 새로운 컨트롤러 추가 시 부모 클래스를 수정할 필요가 없는 구조로 확장성을 확보함.

* feat(ErrorStatus): 프로필 사진 변경 시 에러 코드 추가

- 비어있는 파일 request 시 PROFILE_IMAGE_EMPTY 에러 발생

* feat(profile): 프로필 사진 변경 시 컨트롤러에서 빈 값 검증 로직 추가

* test(member): MemberProfileController 단위 테스트 코드 작성

API의 안정성을 확보하고 프론트엔드와의 연동 규격을 검증하기 위해, MemberProfileController의 모든 엔드포인트에 대한 단위 테스트를 구현함.

- 프로필 조회 및 수정: 닉네임 중복/유효성(@Valid) 검증 및 비즈니스 예외(MEMBER409) 처리 테스트
- 프로필 이미지 변경: MultipartFile 요청 처리 및 빈 파일 업로드 시 예외(MEMBER400) 검증
- 앱 설정 관리: 알림 설정 토글 및 FCM 토큰 갱신 기능의 정상 동작 확인

ControllerTestSupport 상속을 통해 공통 설정을 재사용하였으며,
성공 시나리오뿐만 아니라 다양한 예외 상황을 포괄적으로 커버하여 신뢰성 있는 테스트 환경을 구축함.

* test(member): AuthController 단위 테스트 코드 작성

소셜 로그인 및 회원가입 프로세스의 안정성을 검증하기 위해 AuthController의 핵심 기능에 대한 단위 테스트를 구현함.

- 소셜 로그인/회원가입: 플랫폼 유효성 검증 및 MultipartFile 회원가입 요청 처리 테스트
- 인증/인가 관리: JWT 토큰 재발급(Reissue), 로그아웃, 회원 탈퇴 기능 검증
- ControllerTestSupport를 활용하여 반복되는 Security 설정을 효율적으로 관리

주요 비즈니스 로직에 대한 성공 시나리오와 예외 상황(잘못된 플랫폼 등)을 커버하여 인증 모듈의 신뢰성을 확보함.

* style(SignUpRequest): 불필요한 공백 제거

* refactor(member): Request DTO를 Record로 전환 및 서비스 계층 수정

데이터의 불변성을 보장하고 DTO 클래스의 가독성을 높이기 위해, 기존 Class 형태의 Request DTO